--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,14 @@
+Django==1.11
+django-enumfields==0.9.0
+dj-database-url==0.4.2
+fancycompleter==0.5
+itsdangerous==0.24
+MarkupSafe==0.23
+mimerender==0.6.0
+ordereddict==1.1
+psycopg2==2.6.2
+python-dateutil==2.5.3
+pytz==2016.6.1
+PyYAML==3.12
 requests==2.9.1
+six==1.10.0
