- Changed VENDOR_EXCLUSION_FILTERS to EXCLUSION_FILTER_MODULES so that config only specifies module names - Added filters for August 2017 - Parser now reports filename and line number when an exception occurs - Added FX and WD codes to transaction codes BMOBankAccountParser

--- a/config/config.example.json
+++ b/config/config.example.json
@@ -1,8 +1,8 @@
 {
   "DATABASE_URI": "sqlite://:memory:",
   "DEBUG": false,
-  "VENDOR_EXCLUSION_FILTERS": [
-    "taxes.receipts.filters.ExclusionConditionFilter"
+  "EXCLUSION_FILTER_MODULES": [
+    "taxes.receipts.filters"
   ],
   "LOGGING": {
     "version": 1,
