- Added first working version of Google Sheet upload command (gsheet_upload) - Converted get-historical-rates script to Django command named download_forex - Removing config files with sensitive information

--- a/config/config.example.json
+++ b/config/config.example.json
@@ -31,5 +31,9 @@
             "formatter": "default"
         }
     }
+  },
+  "SPREADSHEET": {
+    "id": "<Google spreadsheet id goes here>",
+    "credentials_file": "path/to/secrets/gdrive.json"
   }
 }
