--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,10 @@ fancycompleter==0.5
 itsdangerous==0.24
 MarkupSafe==0.23
 mimerender==0.6.0
+oauth2client==4.1.2
 ordereddict==1.1
 psycopg2==2.6.2
+pygsheets==1.1.3
 python-dateutil==2.5.3
 pytz==2016.6.1
 PyYAML==3.12
