- Upgrade to python 3 - Switched from JSON to YAML for configuration files - Added ForexRate model - Change 'dump_receipts' command to 'export receipts' - Split CSV export of forex rates to 'export receipts' command - Google Sheet uploads now must come from database - Moved OANDA scrape logic to forex.py module - Moved Google Sheets logic to google_sheets.py module - Added Django model managers for Receipt and ForexRate models for common queries - Code cleanup in Google Sheets module - Added logging to Google Sheets upload

--- a/.gitignore
+++ b/.gitignore
@@ -3,10 +3,10 @@
 **/.DS_Store
 doc/notes.md
 tmp/
-config/config.json
+config/config.yaml
 .python-version
 .cache/
 .testdb/
 config/secrets/*
-config/config.dev.json
-config/config.prod.json
+config/config.dev.yaml
+config/config.prod.yaml
