--- a/config/config.dev.yaml
+++ b/config/config.dev.yaml
@@ -6,7 +6,7 @@ LOGGING:
   disable_existing_loggers: true
   formatters:
     default:
-      format": "%(levelname)s %(message)s"
+      format: "%(levelname)s %(message)s"
   handlers:
     console:
       level: INFO
