- Update pre-commit installation instructions - Rename VendorType enum to ExpenseType - Renamed Vendor.type to Vendor.default_expense_type which is now optional (nullable) - Added required Receipt.expense_type to prepare for vendors to support multiple receipt types - Added advertising to ExpenseType - Added ability to override expense type based on alias match - Move shared CLI module out of commands package so that it doesn't appear in the help - Added bill cancelled code for BMO parser - Fix text in logger error message for unrecognized amount - Added filter for May 2018 - Added primary residence asset type

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,5 +1,9 @@
+repos:
 - repo: git://github.com/pre-commit/pre-commit-hooks
-  sha: v0.9.1
+  rev: a193eab99ed99429b9b8e517be68bed9a7f6ec4f
   hooks:
   - id: flake8
-    args: ["--config", ".flake8", "taxes"]
+    args: ["--config=.flake8"]
+    # Required due to pre-commit-hooks bug #112
+    # https://github.com/pre-commit/pre-commit-hooks/issues/112
+    exclude: 'taxes/receipts/migrations'
