--- a/.pylintrc
+++ b/.pylintrc
@@ -15,14 +15,14 @@ ignore=.git,tmp
 
 # Python code to execute, usually for sys.path manipulation such as
 # pygtk.require().
-#init-hook=
+init-hook='import sys; sys.path.append(".")'
 
 # Use multiple processes to speed up Pylint.
 jobs=4
 
 # List of plugins (as comma separated values of python modules names) to load,
 # usually to register additional checkers.
-load-plugins=pylint_django
+load-plugins=pylint_django,taxes.build.pylint.checkers.django_migrations
 
 # Pickle collected data for later comparisons.
 persistent=yes
