Solved the DEBUG mystery.  Replace 'lint' command with 'web' command to run web server in 'insecure' mode

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,4 +14,4 @@ repos:
   - id: pylint
     entry: pylint
     args: ["--rcfile=.pylintrc"]
-    additional_dependencies: [pylint_django, django, django-enumfields]
+    additional_dependencies: [pylint_django, django, django-enumfields, dj-database-url]
