--- a/requirements.txt
+++ b/requirements.txt
@@ -193,3 +193,12 @@ pylint-django==0.11.1 \
 pylint-plugin-utils==0.3 \
     --hash=sha256:083d134b4f2fefae741ed47ab9229a08d572d4154b1f08eecc8a62666dfa84e9 \
     --hash=sha256:b3a93908d15d265c4c2d7c7822b4b0f247b2de658bd7ececa160a04910d5d4d3
+packaging==19.0 \
+    --hash=sha256:0c98a5d0be38ed775798ece1b9727178c4469d9c3b4ada66e8e6b7849f8732af \
+    --hash=sha256:9e1cbf8c12b1f1ce0bb5344b8d7ecf66a6f8a6e91bcb0c84593ed6d3ab5c4ab3
+pip-api==0.0.5 \
+    --hash=sha256:5c80a3090ed41b66fd39098aa43e3a6ac4d1128eb99c4a7b108df062f31f93a7 \
+    --hash=sha256:86c3de0587b1dae50253d8b7359f22d0c9712b9fc21d3500bb002a757bb811b9
+mccabe==0.6.1 \
+    --hash=sha256:ab8a6258860da4b6677da4bd2fe5dc2c659cff31b3ee4f7f5d64e79735b80d42 \
+    --hash=sha256:dd8d182285a0fe56bace7f45b5e7d1a6ebcbf524e8f3bd87eb0f125271b8831f
