--- a/.pylintrc
+++ b/.pylintrc
@@ -137,7 +137,8 @@ disable=print-statement,
         too-few-public-methods,
         missing-docstring,
         broad-except,
-        fixme
+        fixme,
+        bad-continuation
 
 # Enable the message, report, category or checker with the given id(s). You can
 # either give multiple identifier separated by comma (,) or put this option
@@ -312,7 +313,7 @@ indent-after-paren=4
 indent-string='    '
 
 # Maximum number of characters on a single line.
-max-line-length=100
+max-line-length=88
 
 # Maximum number of lines in a module
 max-module-lines=1000
