--- a/requirements.in
+++ b/requirements.in
@@ -1,7 +1,8 @@
 Django==3.0.4
 dj-database-url==0.4.2
-oauth2client==4.1.2
-pygsheets==1.1.3
+google-auth==1.23.0
+google-auth-httplib2==0.0.4
+pygsheets==2.0.3.1
 PyYAML==5.1
 requests==2.22.0
 psycopg2-binary==2.8.4
