--- a/requirements.in
+++ b/requirements.in
@@ -1,8 +1,12 @@
-Django==3.0.4
+Django==3.0.7
 dj-database-url==0.4.2
-google-auth==1.23.0
+google-auth==1.26.1
 google-auth-httplib2==0.0.4
+
+# due to https://github.com/advisories/GHSA-93xj-8mrv-444m
+httplib2~=0.19.0
+
 pygsheets==2.0.3.1
 PyYAML==5.1
 requests==2.22.0
-psycopg2-binary==2.8.4
+psycopg2-binary==2.8.6
